--- a/styles/components/item/layout.less
+++ b/styles/components/item/layout.less
@@ -4,14 +4,13 @@
 &.sheet {
   &.item {
     .window-content {
+      padding: 0;
       display: flex;
       flex-direction: column;
       flex-wrap: nowrap;
       justify-content: flex-start;
-      padding: 8px;
       color: var(--color-text-dark-primary);
-      overflow-y: auto;
-      overflow-x: hidden;
+      overflow: hidden;
 
       form {
         display: flex;
@@ -28,7 +27,8 @@
           //align-items: center;
           flex: 0 0 70px;
           align-items: start;
-          width: 100%;
+          //width: 100%;
+          padding-right: 5px;
           padding-bottom: 6px;
           border-bottom: 1px solid var(--secondary-background);
 
@@ -75,6 +75,11 @@
         }
 
         .sheet-body {
+          padding: 5px;
+          overflow-x: hidden;
+          overflow-y: auto;
+          height: calc(100% - 77px);
+
           .description {
             height: 100%;
             font-size: 1.2rem;
